deploy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nori-detection
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nds-webui
  namespace: nori-detection
spec:
  selector:
    matchLabels:
      app: nds-webui
  replicas: 1
  template:
    metadata:
      labels:
        app: nds-webui
    spec:
      containers:
      - name: nds-webui
        image: jcpuff20/nds-webui:0.0.1-alpha.2
        resources:
          limits:
            memory: "1Gi"
            cpu: "1000m"
          requests:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 9000
          name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nds-report
  namespace: nori-detection
spec:
  selector:
    matchLabels:
      app: nds-report
  replicas: 1
  template:
    metadata:
      labels:
        app: nds-report
    spec:
      containers:
      - name: nds-report
        image: jcpuff20/nds-report:0.0.1-alpha.2
        resources:
          limits:
            memory: "1Gi"
            cpu: "1000m"
          requests:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
          name: report
---
apiVersion: v1
kind: Service
metadata:
  name: nds-webui-service
  namespace: nori-detection
spec:
  selector:
    app: nds-webui
  ports:
  - port: 9000
    targetPort: http
    name: http
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: nds-report-service
  namespace: nori-detection
spec:
  selector:
    app: nds-report
  ports:
  - port: 8080
    targetPort: report
    name: report
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: nds-db
  namespace: nori-detection
spec:
  type: ExternalName
  externalName: node.lefusoft.cn

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nds-webui-ingress
  namespace: nori-detection
  labels:
    name: nds-website-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
  - host: nds.lefusoft.cn
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nds-webui-service
            port:
              number: 9000
  tls:
  - hosts:
    - nds.lefusoft.cn
    secretName: nds.lefusoft.cn
